@@ -2,10 +2,8 @@ package com.ntt.tl.evaluation.service;
 
 import java.util.Arrays;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -14,6 +12,7 @@ import org.springframework.stereotype.Service;
 
 import com.ntt.tl.evaluation.config.AppConfig;
 import com.ntt.tl.evaluation.config.security.JwtUtils;
+import com.ntt.tl.evaluation.constant.Constant;
 import com.ntt.tl.evaluation.constant.ERole;
 import com.ntt.tl.evaluation.dto.RequestUpdateUser;
 import com.ntt.tl.evaluation.dto.RequestUser;
@@ -29,7 +28,6 @@ import com.ntt.tl.evaluation.mapper.UserMapper;
 import com.ntt.tl.evaluation.repository.UserRepository;
 import com.ntt.tl.evaluation.util.CommonUtil;
 import com.ntt.tl.evaluation.util.ErrorUtil;
-import com.ntt.tl.evaluation.constant.Constant;
 
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
@@ -58,26 +56,55 @@ public class UserService implements IUserServices {
 	private AppConfig appConfig;
 
 	@Override
+	public ResponseGeneric loginUser(String email, String pass) {
+
+		UsersEntity findUser = userRepository.findByEmail(email)
+				.orElseThrow(() -> new GenericException(Constant.LOGIN_INVALID_USER_PASS, HttpStatus.UNAUTHORIZED));
+
+		if (!passwordEncoder.matches(pass, findUser.getPass())) {
+			throw new GenericException(Constant.LOGIN_INVALID_USER_PASS, HttpStatus.UNAUTHORIZED);
+		}
+		
+		List<String> roleNames = findUser.getRoles().stream()
+			    .map(roleEntity -> roleEntity.getName().name()).toList();
+		
+		String token = jwtUtils.createToken(CommonUtil.parceListToMap(roleNames), findUser.getEmail());
+		Date dateNew = new Date();
+		
+		findUser.setLastLogin(dateNew);
+		findUser.setToken(token);
+			
+		return ResponseGeneric.builder().message(token).build();
+	}
+	
+	/**
+	 * Actualiza el ultimo login y token
+	 */
+	@Override
+	public Boolean updateLastLogin(String idUser, String token, Date loginDate) {
+
+		UsersEntity userFind = findValidUser(idUser);
+
+		userFind.setToken(idUser);
+		userFind.setLastLogin(loginDate);
+		userRepository.save(userFind);
+
+		return true;
+
+	}
+
+	@Override
 	public void createAdminUser() {
-			Date dateNew = new Date();
-			List<String> listRole = Arrays.asList("ADMIN", "INVITED", "EDITOR", "USER");
+		Date dateNew = new Date();
+		List<String> roleList = Arrays.stream(ERole.values()).map(Enum::name).toList();
 
-			UsersEntity usersEntity = UsersEntity.builder()
-					.idUser(CommonUtil.generateUUID())
-					//.pass(passwordEncoder.encode("Just21"))
-					.pass("hola")
-					.name("administrador")
-					.created(dateNew).modified(dateNew)
-					.email("admin@admin.com")
-					.token("").isActive(true)
-					.lastLogin(dateNew)
-					.roles(listRole.stream()
-							.map(role -> RoleEntity.builder().name(ERole.valueOf(role)).build())
-							.collect(Collectors.toList()))
-					.build();
+		UsersEntity usersEntity = UsersEntity.builder().idUser(CommonUtil.generateUUID())
+				.pass(passwordEncoder.encode("Just21")).name("Administrador").created(dateNew).modified(dateNew)
+				.email("admin@admin.com").token("").isActive(true).lastLogin(dateNew)
+				.roles(roleList.stream().map(role -> RoleEntity.builder().name(ERole.valueOf(role)).build()).toList())
+				.build();
 
-			userRepository.save(usersEntity);
-
+		userRepository.save(usersEntity);
 
 	}
 
@@ -105,25 +132,13 @@ public class UserService implements IUserServices {
 		if (!CommonUtil.validateRegexPattern(requestUser.getEmail(), appConfig.getEmailRegex())) {
 			throw new GenericException(Constant.INVALID_EMAIL, HttpStatus.BAD_REQUEST);
 		}
-		
-		/*
-		Map<String, Object> propertyUser = new HashMap<String, Object>();
-		propertyUser.put("typeUser", "SA");
-		*/
-		
-		Map<String, Object> propertyUser = new HashMap<>();
-		requestUser.getRoles().forEach(item -> propertyUser.put("typeUser", item));
-		
-		
+
 		Date dateNew = new Date();
 		Boolean inicialStatus = true;
-		UsersEntity usersEntity = userMapper
-				.requestUserToUsersEntity(
-						requestUser,
-						passwordEncoder.encode(requestUser.getPassword()),
-						jwtUtils.createToken(propertyUser, requestUser.getEmail()),
-						dateNew,
-						inicialStatus);
+		UsersEntity usersEntity = userMapper.requestUserToUsersEntity(requestUser,
+				passwordEncoder.encode(requestUser.getPassword()),
+				jwtUtils.createToken(CommonUtil.parceListToMap(requestUser.getRoles()), requestUser.getEmail()),
+				dateNew, inicialStatus);
 
 		List<UsersPhoneEntity> listPhone = userMapper.listPhoneDtoToUsersListPhoneEntity(requestUser.getPhones(),
 				usersEntity);
@@ -137,21 +152,7 @@ public class UserService implements IUserServices {
 
 	}
 
-	/**
-	 * Actualiza el ultimo login y token
-	 */
-	@Override
-	public Boolean updateLastLogin(String idUser, String token, Date loginDate) {
 
-		UsersEntity userFind = findValidUser(idUser);
-
-		userFind.setToken(idUser);
-		userFind.setLastLogin(loginDate);
-		userRepository.save(userFind);
-
-		return true;
-
-	}
 
 	/**
 	 * Elimina el usuario.
@@ -184,7 +185,7 @@ public class UserService implements IUserServices {
 	public UserDto getOneUser(String idUser) {
 
 		UsersEntity userFind = findValidUser(idUser);
-		return  userMapper.userBdToUserDto(userFind);
+		return userMapper.userBdToUserDto(userFind);
 	}
 
 	/**
